--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -1,7 +1,17 @@
 name: 'Terraform'
 
-on: [push, pull_request]
-
+on:
+  push:
+    branches:
+      - main
+    paths-ignore:
+      - 'terraform.yml'
+  pull_request:
+    branches:
+      - main
+    paths-ignore:
+      - 'terraform.yml'
+      
 env:
   TF_LOG: INFO
 
