--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -4,8 +4,8 @@ on:
   push:
     branches:
       - main
-    paths-ignore:
-      - 'terraform.yml'
+    paths:
+      - '!terraform.yml'
   pull_request:
     branches:
       - main
