--- a/.github/workflows/terraform-alt.yaml
+++ b/.github/workflows/terraform-alt.yaml
@@ -17,6 +17,7 @@ jobs:
       RESOURCE_GROUP: ${{ secrets.RESOURCE_GROUP }}
       STORAGE_ACCOUNT: ${{ secrets.STORAGE_ACCOUNT }}
       CONTAINER_NAME: ${{ secrets.CONTAINER_NAME }}
+      TF_LOG: INFO
     runs-on: ubuntu-latest
     environment: production
  
@@ -43,7 +44,7 @@ jobs:
         tf_actions_version: 0.14.8
         tf_actions_subcommand: 'init'
         tf_actions_working_dir: "./main"
-        args: '-backend-config="storage_account_name=${{ secrets.STORAGE_ACCOUNT }}" -backend-config="container_name=${{ secrets.CONTAINER_NAME }}" -backend-config="resource_group_name=${{ secrets.RESOURCE_GROUP }}"'
+        args: '-backend-config="storage_account_name=${{ STORAGE_ACCOUNT }}" -backend-config="container_name=${{ CONTAINER_NAME }}" -backend-config="resource_group_name=${{ RESOURCE_GROUP }}"'
  
     - name: 'Terraform Validate'
       uses: hashicorp/terraform-github-actions@master
