new github action

--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -1,6 +1,6 @@
 name: 'Terraform'
 
-on: [push, pull_request]
+on: workflow_dispatch
 
 env:
   TF_LOG: INFO
@@ -48,7 +48,7 @@ jobs:
       env:
         ARM_CLIENT_ID: ${{ secrets.ARM_CLIENT_ID }}
         ARM_CLIENT_SECRET: ${{ secrets.ARM_CLIENT_SECRET }}
-        ARM_TENANT_ID: ${{ secrets.ARM_TENANT_ID }}
+        ARM_TENANT_ID: ${{ secrets.ARM_SUBSCRIPTION_IDD }}
         ARM_SUBSCRIPTION_ID: ${{ secrets.ARM_SUBSCRIPTION_ID }}
       if: github.event_name == 'pull_request'
       run: terraform plan -no-color
